[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-and-crypto-payment"
version = "0.1.19"
description = "Accept Bitcoin, USDT, USDC, ETH and Binance Pay directly into your wallet — no merchant account, no KYC, 10-minute Python integration"
readme = "README.md"
authors = [{ name = "PayerURL" }]
license = { text = "MIT" }
dependencies = ["requests"]
keywords = [
  "crypto", "bitcoin", "ethereum", "binance", "binance-api", "binance-payment",
  "binance-pay", "usdt", "usdc", "trc20", "erc20", "bep20", "payment",
  "payment-gateway", "crypto-payment", "crypto-checkout", "checkout",
  "invoice", "qr-code", "qr-payment", "merchant", "django", "flask", "fastapi",
  "python-sdk", "web3", "wallet", "stablecoin", "accept-crypto", "e-commerce",
  "online-payment", "bnb", "tether", "direct-payment", "no-kyc",
  "django-payment", "flask-crypto"
]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]
