[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-and-crypto-payment"
version = "0.1.20"
description = "Accept Bitcoin, USDT, USDC, ETH and Binance Pay directly into your wallet — no merchant account, no KYC, 10-minute Python integration"
readme = "README.md"
authors = [{ name = "PayerURL" }]
license = { text = "MIT" }
dependencies = ["requests"]
keywords = [
  "crypto","binance","coinbase","credit card to crypto",  "crypto payment gateway",  "cryptocurrency payment",  "bitcoin payment", 
]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]
